# package_publishing_example

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  assignment.md  example.ipynb  main.py  pyproject.toml
.github/workflow/: ci-cd.yaml
.github/workflows/: ci-cd.yaml  ghcr.yaml
src/package_publishing_example/: __init__.py  cli.py  recvomp.py
tests/: test_print.py  test_revcomp.py
