[project]
name = "package-publishing-example"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rens Holmer", email = "8225367+holmrenser@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = ["ruff>=0.11.0", "uv-dynamic-versioning>=0.6.0"]

[project.scripts]
package-publishing-example = "package_publishing_example:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
